--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = ./inventory/hosts.yml
+roles_path = ./roles
 host_key_checking = False
 remote_user = sysadmin
 private_key_file = ~/.ssh/id_ed25519
