--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,27 +1,48 @@
 all:
+  vars:
+    ansible_user: sysadmin
+    ansible_ssh_private_key_file: ~/.ssh/id_ed25519
+    ansible_python_interpreter: /usr/bin/python3
+
   children:
     control:
       hosts:
         control-node:
           ansible_host: 10.0.2.11
-    
+          ansible_connection: local
+          internal_ip: 10.0.2.11
+          host_only_ip: 192.168.56.11
+
     web_servers:
       hosts:
         web-server:
           ansible_host: 10.0.2.12
-    
+          internal_ip: 10.0.2.12
+          host_only_ip: 192.168.56.12
+
     app_servers:
       hosts:
         app-server:
           ansible_host: 10.0.2.13
-    
+          internal_ip: 10.0.2.13
+          host_only_ip: 192.168.56.13
+
     db_servers:
       hosts:
         db-server:
           ansible_host: 10.0.2.14
-    
+          internal_ip: 10.0.2.14
+          host_only_ip: 192.168.56.14
+
     managed_nodes:
       children:
         web_servers:
         app_servers:
         db_servers:
+
+    monitoring_targets:
+      hosts:
+        control-node:
+        web-server:
+        app-server:
+        db-server:
